--- a/index.html
+++ b/index.html
@@ -12,6 +12,21 @@
 
 
 <style>
+  .slider-wrap {
+  overflow: hidden;
+  position: relative;
+}
+.slider {
+  display: flex;
+  transition: transform 0.6s ease-in-out;
+}
+.slide {
+  flex: 0 0 100%; /* كل مرة صورة واحدة */
+}
+@media(min-width: 768px){
+  .slide { flex: 0 0 33.333%; } /* في التابلت والكمبيوتر يجيب 3 صور */
+}
+
 </style>
 
 </head>
@@ -100,7 +115,7 @@
       </div>
       <div class="hero-media reveal">
         <!-- يمكنك وضع فيديو صامت بدلاً من الصورة -->
-        <img src="https://images.unsplash.com/photo-1503387762-592deb58ef4e?q=80&w=1600&auto=format&fit" alt="أعمال تنفيذ وتشطيب">
+        <img src="صورة.jpeg" alt="أعمال تنفيذ وتشطيب">
       </div>
     </div>
   </section>
@@ -348,23 +363,46 @@
   },{threshold:.6});
   counters.forEach(el=>io2.observe(el));
 
-  // === Projects slider (3-up) ===
-  const slider = document.getElementById('projSlider');
-  const slides = Array.from(slider.children);
-  let idx = 0, autoTimer;
-  function calcStep(){ return slides[0].offsetWidth; }
-  function go(to){
-    const visible = 3; // عدد الظاهر على الديسكتوب
-    idx = (to + slides.length) % (slides.length - (visible - 1));
-    slider.style.transform = `translateX(-${idx * calcStep()}px)`;
-  }
-  function moveProjects(dir){ stopAuto(); go(idx + dir); startAuto(); }
-  function startAuto(){ autoTimer = setInterval(()=>go(idx+1), 4000); }
-  function stopAuto(){ clearInterval(autoTimer); }
+  // === Projects slider (responsive auto) ===
+const slider = document.getElementById('projSlider');
+const slides = Array.from(slider.children);
+let idx = 0, autoTimer;
+
+// يحسب كم صورة لازم تكون ظاهرة حسب حجم الشاشة
+function getVisible() {
+  return window.innerWidth < 768 ? 1 : 3; // موبايل = 1 ، ديسكتوب = 3
+}
+
+// عرض شريحة معيّنة
+function calcStep() { return slides[0].offsetWidth; }
+function go(to) {
+  const visible = getVisible();
+  idx = (to + slides.length) % (slides.length - (visible - 1));
+  slider.style.transform = `translateX(-${idx * calcStep()}px)`;
+}
+
+// تحريك يدوي
+function moveProjects(dir) {
+  stopAuto();
+  go(idx + dir);
   startAuto();
-  slider.addEventListener('mouseenter', stopAuto);
-  slider.addEventListener('mouseleave', startAuto);
-  window.addEventListener('resize', ()=>go(idx));
+}
+
+// تشغيل تلقائي
+function startAuto() {
+  autoTimer = setInterval(() => go(idx + 1), 3000); // كل 3 ثواني
+}
+function stopAuto() { clearInterval(autoTimer); }
+
+startAuto();
+
+// توقف عند المرور بالماوس
+slider.addEventListener('mouseenter', stopAuto);
+slider.addEventListener('mouseleave', startAuto);
+
+// إعادة حساب عند تغيير حجم الشاشة
+window.addEventListener('resize', () => go(idx));
+
 
   // === Lightbox ===
   const lb = document.getElementById('lightbox');
@@ -387,6 +425,8 @@
       if(lb.classList.contains('active')) lb.classList.remove('active');
     }
   });
+
+  
 
 
 
